Bugfix: margin min-height on breadcrumb was too small

--- a/sites/all/themes/mcneese/css/screen/screen-navigation.css
+++ b/sites/all/themes/mcneese/css/screen/screen-navigation.css
@@ -309,7 +309,7 @@
   font-family: Arial,Helvetica,Sans-Serif,Sans;
   font-size: 12px;
 
-  min-height: 20px;
+  min-height: 24px;
 
   margin: 0 0 4px 0;
   padding: 0 3px;
